--- a/jupyter/workbook2.ipynb
+++ b/jupyter/workbook2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4  Afghanistan  AFG  1900             161.293068"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "4                0.02010                  0.08949  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "dict_keys(['ABW', 'AFE', 'AFG', 'AFW', 'AGO', 'ALB', 'AND', 'ARB', 'ARE', 'ARG', 'ARM', 'ASM', 'ATG', 'AUS', 'AUT', 'AZE', 'BDI', 'BEL', 'BEN', 'BFA', 'BGD', 'BGR', 'BHR', 'BHS', 'BIH', 'BLR', 'BLZ', 'BMU', 'BOL', 'BRA', 'BRB', 'BRN', 'BTN', 'BWA', 'CAF', 'CAN', 'CEB', 'CHE', 'CHI', 'CHL', 'CHN', 'CIV', 'CMR', 'COD', 'COG', 'COL', 'COM', 'CPV', 'CRI', 'CSS', 'CUB', 'CUW', 'CYM', 'CYP', 'CZE', 'DEU', 'DJI', 'DMA', 'DNK', 'DOM', 'DZA', 'EAP', 'EAR', 'EAS', 'ECA', 'ECS', 'ECU', 'EGY', 'EMU', 'ERI', 'ESP', 'EST', 'ETH', 'EUU', 'FCS', 'FIN', 'FJI', 'FRA', 'FRO', 'FSM', 'GAB', 'GBR', 'GEO', 'GHA', 'GIB', 'GIN', 'GMB', 'GNB', 'GNQ', 'GRC', 'GRD', 'GRL', 'GTM', 'GUM', 'GUY', 'HIC', 'HKG', 'HND', 'HPC', 'HRV', 'HTI', 'HUN', 'IBD', 'IBT', 'IDA', 'IDB', 'IDN', 'IDX', 'IMN', 'IND', 'INX', 'IRL', 'IRN', 'IRQ', 'ISL', 'ISR', 'ITA', 'JAM', 'JOR', 'JPN', 'KAZ', 'KEN', 'KGZ', 'KHM', 'KIR', 'KNA', 'KOR', 'KWT', 'LAC', 'LAO', 'LBN', 'LBR', 'LBY', 'LCA', 'LCN', 'LDC', 'LIC', 'LIE', 'LKA', 'LMC', 'LMY', 'LSO', 'LTE', 'LTU', 'LUX', 'LVA', 'MAC', 'MAF', 'MAR', 'MCO', 'MDA', 'MDG', 'MDV', 'MEA', 'MEX', 'MHL', 'MIC', 'MKD', 'MLI', 'MLT', 'MMR', 'MNA', 'MNE', 'MNG', 'MNP', 'MOZ', 'MRT', 'MUS', 'MWI', 'MYS', 'NAC', 'NAM', 'NCL', 'NER', 'NGA', 'NIC', 'NLD', 'NOR', 'NPL', 'NRU', 'NZL', 'OED', 'OMN', 'OSS', 'PAK', 'PAN', 'PER', 'PHL', 'PLW', 'PNG', 'POL', 'PRE', 'PRI', 'PRK', 'PRT', 'PRY', 'PSE', 'PSS', 'PST', 'PYF', 'QAT', 'ROU', 'RUS', 'RWA', 'SAS', 'SAU', 'SDN', 'SEN', 'SGP', 'SLB', 'SLE', 'SLV', 'SMR', 'SOM', 'SRB', 'SSA', 'SSD', 'SSF', 'SST', 'STP', 'SUR', 'SVK', 'SVN', 'SWE', 'SWZ', 'SXM', 'SYC', 'SYR', 'TCA', 'TCD', 'TEA', 'TEC', 'TGO', 'THA', 'TJK', 'TKM', 'TLA', 'TLS', 'TMN', 'TON', 'TSA', 'TSS', 'TTO', 'TUN', 'TUR', 'TUV', 'TZA', 'UGA', 'UKR', 'UMC', 'URY', 'USA', 'UZB', 'VCT', 'VEN', 'VGB', 'VIR', 'VNM', 'VUT', 'WLD', 'WSM', 'XKX', 'YEM', 'ZAF', 'ZMB', 'ZWE'])"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        " '2020': -4.506904542}"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "Name: Country Code, Length: 266, dtype: object"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "2                0.02011                  0.08966                0.0  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "21007       10.360697  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
        "21007       10.360697  "
       ]
      },
-     "execution_count": 188,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1234,7 @@
        "4                0.0             0.0  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,7 +1281,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    7696.000000\n",
+       "mean        2.388765\n",
+       "std         5.569407\n",
+       "min       -64.047107\n",
+       "25%         0.000000\n",
+       "50%         0.000000\n",
+       "75%         4.943125\n",
+       "max        88.957666\n",
+       "Name: GDP annual growth, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avg_height_human[\"GDP annual growth\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2423, Entity                     Bosnia and Herzegovina\n",
+      "Code                                          BIH\n",
+      "code_alpha2                                    BA\n",
+      "Year                                         1996\n",
+      "Mean male height (cm)                  180.869174\n",
+      "Mean female height (cm)                 165.84831\n",
+      "change in male height                     0.05023\n",
+      "change in female height                   0.06966\n",
+      "GDP annual growth                       88.957666\n",
+      "GDP annual USD                          88.957666\n",
+      "Name: 2423, dtype: object)\n",
+      "(5857, Entity                     Equatorial Guinea\n",
+      "Code                                     GNQ\n",
+      "code_alpha2                               GQ\n",
+      "Year                                    1996\n",
+      "Mean male height (cm)             167.362147\n",
+      "Mean female height (cm)           157.326344\n",
+      "change in male height                0.02882\n",
+      "change in female height              0.04448\n",
+      "GDP annual growth                  66.579997\n",
+      "GDP annual USD                     66.579997\n",
+      "Name: 5857, dtype: object)\n",
+      "(8881, Entity                           Iraq\n",
+      "Code                              IRQ\n",
+      "code_alpha2                        IQ\n",
+      "Year                             1990\n",
+      "Mean male height (cm)      170.884527\n",
+      "Mean female height (cm)    158.733777\n",
+      "change in male height         0.05044\n",
+      "change in female height        0.0289\n",
+      "GDP annual growth           57.817828\n",
+      "GDP annual USD              57.817828\n",
+      "Name: 8881, dtype: object)\n",
+      "(14110, Entity                           Oman\n",
+      "Code                              OMN\n",
+      "code_alpha2                        OM\n",
+      "Year                             1967\n",
+      "Mean male height (cm)      167.935169\n",
+      "Mean female height (cm)    156.970651\n",
+      "change in male height         0.03276\n",
+      "change in female height       0.08891\n",
+      "GDP annual growth           66.219084\n",
+      "GDP annual USD              66.219084\n",
+      "Name: 14110, dtype: object)\n",
+      "(14111, Entity                           Oman\n",
+      "Code                              OMN\n",
+      "code_alpha2                        OM\n",
+      "Year                             1968\n",
+      "Mean male height (cm)      168.081194\n",
+      "Mean female height (cm)    157.026786\n",
+      "change in male height         0.03346\n",
+      "change in female height       0.08688\n",
+      "GDP annual growth           81.887797\n",
+      "GDP annual USD              81.887797\n",
+      "Name: 14111, dtype: object)\n",
+      "(16234, Entity                     Saudi Arabia\n",
+      "Code                                SAU\n",
+      "code_alpha2                          SA\n",
+      "Year                               1970\n",
+      "Mean male height (cm)        168.454135\n",
+      "Mean female height (cm)       156.53524\n",
+      "change in male height           0.09449\n",
+      "change in female height         0.12612\n",
+      "GDP annual growth             58.647331\n",
+      "GDP annual USD                58.647331\n",
+      "Name: 16234, dtype: object)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in avg_height_human.iterrows():\n",
+    "    if (row[1][\"GDP annual growth\"] > 50):\n",
+    "        print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1490,7 @@
        "66                0.0             0.0  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
